Fix tags background for the dark mode

--- a/styles/dark-theme.scss
+++ b/styles/dark-theme.scss
@@ -53,12 +53,12 @@
     color: #fff;
   }
 
-  .filter-tags-list a {
+  .filter-tags-list li {
     background: #33393f;
     color: #f2f5f7;
   }
 
-  .filter-tags-list a:hover {
+  .filter-tags-list li:hover {
     border-color: #f2f5f7;
   }
 
